codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__session_header_indicates_yolo_mode.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────╮
│ ████████  Welcome to UnieAI Code!          │
│ ████████  Send /help for help information. │
│ ████████  (vtest)                          │
│                                            │
│ model:       gpt-5   /model to change      │
│ directory:   /tmp/project                  │
│ permissions: YOLO mode                     │
╰────────────────────────────────────────────╯
