codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__vite_plus_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭───────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.0.22-dev-uc0.5.0-ac0.4.0 -> 9.9.9      │
│ Run vp install -g @unieai/code to update.                     │
│                                                               │
│ See full release notes:                                       │
│ https://github.com/UnieAI/Unieai-Code-Publish/releases/latest │
╰───────────────────────────────────────────────────────────────╯
